HLA 차트 서비스 구현 - base variation plot, coverage plot 차트 생성에 대한 result service 데이터 요청 후 처리하는 케이스 구현