@@ -1,5 +1,7 @@
 package com.ngenebio.msa.chart.service.defaults;
 
+import com.ngenebio.msa.chart.exception.result.RequestResultServiceFailedException;
+import com.ngenebio.msa.chart.model.chart.hla.BaseVariationPlotChartData;
 import com.ngenebio.msa.chart.model.chart.hla.CoveragePlotChartData;
 import com.ngenebio.msa.chart.model.enumtype.ChartType;
 import com.ngenebio.msa.chart.result.HlaResultServiceApi;
@@ -19,7 +21,7 @@ import org.testcontainers.shaded.com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.*;
@@ -67,7 +69,7 @@ class DefaultHlaChartServiceTest {
                 "data", "hla", "baseVariationPlotData.json");
         var json = new String(Files.readAllBytes(dataFilePath));
 
-        var chartTypes = Arrays.asList(ChartType.BASE64);
+        var chartTypes = List.of(ChartType.BASE64);
 
         // when
         var result = hlaChartService.generateBaseVariationPlot(json, chartTypes);
@@ -87,6 +89,66 @@ class DefaultHlaChartServiceTest {
         verify(chartJavaScriptExecutorUtils, times(1))
                 .getChartPngImageBase64(any(JavascriptExecutor.class));
     }
+    @DisplayName("BaseVariationPlot 차트 생성 성공 - runId, sampleId, gene, base64")
+    @Test
+    void generateBaseVariationPlot_runId_sampleId_geneTest() throws IOException, RequestResultServiceFailedException {
+        // given - data
+        var runId = "run001";
+        var sampleId = "sample001";
+        var gene = "A";
+        var chartTypes = List.of(ChartType.BASE64);
+        var dataFilePath = new ClassPathResource(
+                "data/hla/baseVariationPlotData.json",
+                this.getClass().getClassLoader());
+
+        var chartDataJson = new String(Files.readAllBytes(dataFilePath.getFile().toPath()));
+        var objectMapper = new ObjectMapper();
+        var baseVariationPlotChartData = objectMapper.readValue(chartDataJson, BaseVariationPlotChartData.class);
+        when(hlaResultServiceApi.getBaseVariationPlotChartData(runId, sampleId, gene))
+                .thenReturn(baseVariationPlotChartData);
+
+        // given - temp directory
+        var tempDirectoryPath = Paths.get(System.getProperty("java.io.tmpdir"),
+                "ngenebio_chart_temp", UUID.randomUUID().toString());
+
+        if (!Files.exists(tempDirectoryPath))
+            Files.createDirectories(tempDirectoryPath);
+
+        when(chartServiceUtils.getTempDirectory()).thenReturn(tempDirectoryPath);
+
+        // given - chrome driver
+        when(chartServiceUtils.createChromeDriver()).thenCallRealMethod();
+
+        // given - generateRenderedChartHtmlFile
+        var dummyPath = Paths.get("");
+        doReturn(dummyPath).when(chartServiceUtils).generateRenderedChartHtmlFile(
+                eq(tempDirectoryPath),
+                eq("chart/hla/hla-base-variation-plot.html"),
+                any(String.class));
+
+
+        // given - create png image
+        doReturn("").when(chartJavaScriptExecutorUtils).getChartPngImageBase64(any());
+
+        // when
+        var result = hlaChartService.generateBaseVariationPlot(runId, sampleId, gene, chartTypes);
+
+        // then
+        assertThat(result).isNotNull();
+        assertThat(result.getBase64()).isNotNull();
+
+        verify(chartServiceUtils, times(1)).createChromeDriver();
+        verify(chartServiceUtils, times(1)).getTempDirectory();
+        verify(chartServiceUtils, times(1)).generateRenderedChartHtmlFile(
+                eq(tempDirectoryPath),
+                eq("chart/hla/hla-base-variation-plot.html"),
+                any(String.class)
+        );
+
+        verify(chartJavaScriptExecutorUtils, times(1))
+                .getChartPngImageBase64(any(JavascriptExecutor.class));
+    }
+
     @DisplayName("Coverage Plot 차트 생성 성공 - base64")
     @Test
     void generateCoveragePlotTest() throws IOException {
@@ -111,7 +173,7 @@ class DefaultHlaChartServiceTest {
 
         var json = "{ \"dummyData\": \"coverage plot\" }";
 
-        var chartTypes = Arrays.asList(ChartType.BASE64);
+        var chartTypes = List.of(ChartType.BASE64);
 
         // when
         var result = hlaChartService.generateCoveragePlot(json, chartTypes);
@@ -134,14 +196,14 @@ class DefaultHlaChartServiceTest {
 
     @DisplayName("Coverage Plot 차트 생성 성공 - runId, sampleId, gene, base64")
     @Test
-    void generateCoveragePlot_runId_sampleId_gene_Test() throws IOException {
+    void generateCoveragePlot_runId_sampleId_geneTest() throws IOException, RequestResultServiceFailedException {
         // given - data
         var runId = "run001";
         var sampleId = "sample001";
         var gene = "A";
-        var chartTypes = Arrays.asList(ChartType.BASE64);
-        var htmlResourcePath = "chart/hla/hla-coverage-plot.html";
-        var dataFilePath = new ClassPathResource("data/hla/coveragePlotData.json", this.getClass().getClassLoader());
+        var chartTypes = List.of(ChartType.BASE64);
+        var dataFilePath = new ClassPathResource("data/hla/coveragePlotData.json",
+                this.getClass().getClassLoader());
 
         var chartDataJson = new String(Files.readAllBytes(dataFilePath.getFile().toPath()));
         var objectMapper = new ObjectMapper();
